// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MovieRepository createMovie should return void or callback 1`] = `
Object {
  "__v": 0,
  "_id": "5d3054fcf7b5af25f4eacae8",
  "duration": 169,
  "genre": Array [
    "science",
    "fiction",
  ],
  "title": "Interstellar",
  "year": 2014,
}
`;

exports[`MovieRepository getAllMovies should return all movies in JSON 1`] = `
Array [
  Object {
    "_id": "5d305371610ea402dee6547c",
    "duration": 181,
    "genre": Array [
      "SuperHero",
      "Action",
    ],
    "title": "Vengadores:Endgame",
    "year": 2019,
  },
  Object {
    "_id": "5d305371610ea402dee6547d",
    "duration": 129,
    "genre": Array [
      "Terror",
      "Suspense",
    ],
    "title": "Glass",
    "year": 2019,
  },
  Object {
    "__v": 0,
    "_id": "5d305377066cd610945a334f",
    "duration": 169,
    "genre": Array [
      "science",
      "fiction",
    ],
    "title": "Interstellar",
    "year": 2014,
  },
  Object {
    "__v": 0,
    "_id": "5d3053e75bb36122d8c2dbf1",
    "duration": 169,
    "genre": Array [
      "science",
      "fiction",
    ],
    "title": "Interstellar",
    "year": 2014,
  },
  Object {
    "__v": 0,
    "_id": "5d3053ea11c0aa22d8d7ee60",
    "duration": 169,
    "genre": Array [
      "science",
      "fiction",
    ],
    "title": "Interstellar",
    "year": 2014,
  },
  Object {
    "__v": 0,
    "_id": "5d3054fcf7b5af25f4eacae8",
    "duration": 169,
    "genre": Array [
      "science",
      "fiction",
    ],
    "title": "Interstellar",
    "year": 2014,
  },
]
`;

exports[`MovieRepository getMovieById should return data for Id 1`] = `
Object {
  "_id": "5d305371610ea402dee6547b",
  "duration": 100,
  "genre": Array [
    "Comedy",
    "Animation",
  ],
  "title": "Toy Story 4",
  "year": 2019,
}
`;

exports[`MovieRepository updateMovieById should return json object updated 1`] = `
Object {
  "_id": "5d305371610ea402dee6547b",
  "duration": 100,
  "genre": Array [
    "Comedy",
    "Animation",
  ],
  "title": "Toy Story 4",
  "year": 2019,
}
`;
